# pam_motd

./: CMakeLists.txt  COPYING  README.md  config.h.in  pam_motd.8.xml  pam_motd.c  pam_openpam.c  update-motd.5
.github/workflows/: freebsd.yaml  macos.yaml
cmake/modules/: FindPAM.cmake
include/: _pam_macros.h  _porting.h  pam_cc_compat.h  pam_modutil.h  pam_openpam.h
libpam_internal/: pam_debug.c
man/: custom-man.xsl  pam_motd.8  pam_motd.8.xml  update-motd.5
pam_modutil/: cleanup.c  getpwnam.c  ioloop.c  pam_modutil_private.h  priv.c
